FIX: pre tag align.

--- a/DGN/wwwroot/css/map.css
+++ b/DGN/wwwroot/css/map.css
@@ -16,3 +16,7 @@
         margin-bottom: 5px;
     }
 
+pre {
+    text-align: left;
+    white-space: pre-line;
+}
